<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="clear">CLEAR</string>
    <string name="calculate">CALCULATE</string>
    <string name="enter_distance_mater">Enter distance (mater)</string>
    <string name="enter_time_second">Enter time (second)</string>
    <string name="average_speed_km_h">Average Speed (km/h)</string>
    <string name="over">Speed is over limit</string>
    <string name="distimre">Distance and time are required.</string>
    <string name="zero">Time must be greater than zero.</string>
</resources>