<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="294dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speed_meter" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Head">

        <Button
            android:id="@+id/clear"
            android:layout_width="77dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/clear"
            app:layout_constraintStart_toStartOf="@+id/Etime"
            app:layout_constraintTop_toBottomOf="@+id/Etime" />

        <Button
            android:id="@+id/cal"
            android:layout_width="108dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="@+id/clear"
            app:layout_constraintEnd_toEndOf="@+id/Etime"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/clear"
            app:layout_constraintTop_toTopOf="@+id/clear"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/Edis"
            android:layout_width="186dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:background="#B3B3B3"
            android:ems="10"
            android:hint="@string/enter_distance_mater"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/Etime"
            android:layout_width="185dp"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:background="#B3B3B3"
            android:ems="10"
            android:hint="@string/enter_time_second"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Edis" />

        <TextView
            android:id="@+id/AVT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_speed_km_h"
            android:textColor="#FF0000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/cal"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/clear"
            app:layout_constraintTop_toBottomOf="@+id/cal" />

        <TextView
            android:id="@+id/AV"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/AVT"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/AVT"
            app:layout_constraintTop_toBottomOf="@+id/AVT" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/Head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SPEED CALCULATOR"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>